--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,6 +31,11 @@
     <string name="governor_kt_map">KT Branch office</string>
     <string name="governor_map">Company Location</string>
     <string name="program_info">Program information</string>
+    <string name="settings">Settings</string>
+    <string name="overlay">Incoming call alert</string>
+    <string name="overlay_title">Overlay</string>
+    <string name="push_title">Push</string>
+    <string name="push">Push Notification Consent</string>
 
     <!-- 알림  -->
     <string name="D_TitleName">notice</string>
@@ -72,6 +77,7 @@
     <string name="com_eluo">eluo</string>
     <string name="search_text">ID, phone, name</string>
     <string name="search">Search</string>
+    <string name="appInfo">Ver: 1.6 </string>
 
     <!-- 메인 화면 -->
     <string name="main_notice">Notice</string>
