--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,11 @@
     <string name="governor_kt_map">KT 관악지사</string>
     <string name="governor_map">Company Location</string>
     <string name="program_info">프로그램 정보</string>
+    <string name="settings">설정</string>
+    <string name="overlay">수신전화 알림</string>
+    <string name="overlay_title">오버레이</string>
+    <string name="push_title">푸쉬</string>
+    <string name="push">푸쉬 알림 동의</string>
 
     <!-- 알림  -->
     <string name="D_TitleName">알림</string>
@@ -72,6 +77,7 @@
     <string name="com_mail">master@eluocnc.com</string>
     <string name="com_eluo">eluo</string>
     <string name="search_text">ID,전화,이름</string>
+    <string name="appInfo">Ver: 1.6 </string>
 
 
     <!-- 메인 화면 -->
