--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -79,7 +79,8 @@
     <string name="com_mail">master@eluocnc.com</string>
     <string name="com_eluo">eluo</string>
     <string name="search_text">ID,電話,名前</string>
-    <string name="appInfo">Ver: 1.6 </string>
+    <string name="appInfo">Ver: 1.6.3 </string>
+    <string name="view_more">[もっと見る]</string>
 
 
     <!-- 메인 화면 -->
