--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -57,12 +57,14 @@
     <string name="T_booking_name_impossible">申請者の名前は変更されません。</string>
     <string name="T_exit_meg">もう一度押す終了します。</string>
     <string name="T_search_no">検索内容を入力してください。</string>
+    <string name="T_search_no2">検索用語を2文字以上入力してください。</string>
     <string name="T_multi_windowMode">マルチウィンドウ使用時にスムーズに使用することはできません。</string>
     <string name="T_app_permissions">アプリを起動するために携帯電話の管理者権限を設定する必要があります。</string>
     <string name="T_meeting_4floor">4階の会議室の予約状況です。</string>
     <string name="T_meeting_7floor">7階の会議室の予約状況です。</string>
     <string name="T_meeting_8floor">8階の会議室の予約状況です。</string>
     <string name="T_meeting_not">予約された会議室がありません。</string>
+    <string name="T_search_complete">検索が完了しました。</string>
 
 
     <!-- 네트워크오류 문구 -->
@@ -109,4 +111,5 @@
     <string name="info_head_office_7">7階の会議室</string>
     <string name="info_head_office_8">8階の会議室</string>
     <string name="info_office_expansion_4">4階の会議室</string>
+
 </resources>
