--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="com_mail">master@eluocnc.com</string>
     <string name="com_eluo">eluo</string>
     <string name="search_text">ID,전화,이름</string>
-    <string name="appInfo">Ver: 1.7.3</string>
+    <string name="appInfo">Ver: 1.7.6</string>
     <string name="view_more">[더 보기]</string>
 
 
@@ -97,7 +97,7 @@
     <string name="main_outside">외근현황</string>
 
     <!-- 정보 -->
-    <string name="app_info_v">앱 정보 Alpha 1.7.3(Development Test Version)</string>
+    <string name="app_info_v">앱 정보 Alpha 1.7.6(Development Test Version)</string>
 
     <!-- 정보 표기 -->
     <string name="info_name">이름</string>
@@ -111,6 +111,6 @@
     <string name="info_title">타이틀</string>
     <string name="info_head_office_7">7층 회의실</string>
     <string name="info_head_office_8">8층 회의실</string>
-    <string name="info_office_expansion_4">본사 확장 회의실(미정)</string>
+    <string name="info_office_expansion_4">4층 회의실</string>
 
 </resources>
