--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="T_meeting_8floor">8층 회의실 예약 현황 입니다</string>
     <string name="T_meeting_not">예약된 회의실이 없습니다</string>
     <string name="T_search_complete">검색이 완료 되었습니다</string>
+    <string name="T_search_log">데이터 많은 경우 시간이 오래 걸립니다.</string>
     <string name="T_no_data">데이터가 없습니다.</string>
 
     <!-- 네트워크오류 문구 -->
@@ -87,7 +88,7 @@
     <string name="com_mail">master@eluocnc.com</string>
     <string name="com_eluo">eluo</string>
     <string name="search_text">ID,전화,이름</string>
-    <string name="appInfo">Ver: 1.7.7</string>
+    <string name="appInfo">Ver: 1.7.10</string>
     <string name="view_more">[더 보기]</string>
 
 
@@ -97,7 +98,7 @@
     <string name="main_outside">외근현황</string>
 
     <!-- 정보 -->
-    <string name="app_info_v">앱 정보 Alpha 1.7.7(Development Test Version)</string>
+    <string name="app_info_v">앱 정보 Alpha 1.7.10(Development Test Version)</string>
 
     <!-- 정보 표기 -->
     <string name="info_name">이름</string>
